--- a/templates/about/_entry.twig
+++ b/templates/about/_entry.twig
@@ -1,7 +1,24 @@
-{{entry.title}}
-{{entry.pageIntro}}
-{{entry.subtitle}}
+{% extends "_layouts/main" %}
 
-{# {% {% for drink in drinks %}
-    {{drink.title}}
-{% endfor %}} #}
+{% block main %}
+
+<ul class="breadcrumbs">
+    <li><a href="../">Home</a></li>
+    <li>About</li>
+</ul>
+<div class="full-bleed-header" style="background-size: 100%; height: 200px; background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url(https://thepintpundits.files.wordpress.com/2013/02/dark-horse-tres-blueberry-stout-1.jpg); background-repeat: no-repeat, repeat;">
+    <div class="page-title text-center">
+        <h2 class="logo"><span class="scripty">{{entry.title}}</h2>
+        <p class="tagline reverse">{{entry.subtitle}}</p>
+    </div>
+</div>
+<div class="row">
+    <div class="large-12 small-12 columns">
+        <div class="intro large-12 small-12 columns text-center">
+            <p>{{entry.pageIntro}}</p>
+        </div>
+        <p>{{entry.pageCopy}}</p>
+    </div>
+</div>
+
+{% endblock %}
