--- a/templates/news/_entry.twig
+++ b/templates/news/_entry.twig
@@ -1,2 +1,23 @@
+{% extends "_layouts/main" %}
+{% block main %}
 
-{{entry.title}}
+<div class="full-bleed-header" style="background-size: 100%; height: 200px; background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url(/images/drinks/espresso-shot.jpg); background-repeat: no-repeat, repeat;">
+    <div class="page-title text-center">
+        <h2 class="logo"><span class="scripty">{{entry.title}}</h2>
+        <p class="tagline reverse">Coffee news from the shop and beyond.</p>
+    </div>
+</div>
+<div class="row">
+    <div class="large-12 small-12 columns">
+        <div class="intro large-12 small-12 columns text-center">
+            <p>{{entry.excerpt}}</p>
+        </div>
+
+        <h1>{{entry.title}}</h1>
+        <p class="byline">{{entry.nameAuthor}}</p>
+        <p>{{entry.newsBody}}</p>
+
+
+
+{% endblock %}
+
