--- a/templates/about/_entry.twig
+++ b/templates/about/_entry.twig
@@ -4,7 +4,7 @@
 
 <ul class="breadcrumbs">
     <li><a href="../">Home</a></li>
-    <li>About</li>
+    <li>{{entry.title}}</li>
 </ul>
 <div class="full-bleed-header" style="background-size: 100%; height: 200px; background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url(https://thepintpundits.files.wordpress.com/2013/02/dark-horse-tres-blueberry-stout-1.jpg); background-repeat: no-repeat, repeat;">
     <div class="page-title text-center">
